--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,9 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
-    <mat-nav-list>
-      <a mat-list-item routerLink="/signup" (click)="sidenav.close()">
-      <mat-icon>create</mat-icon>
-      <span class="nav-caption">Sign Up</span>
-      </a>
-          <a mat-list-item routerLink="/login" (click)="sidenav.close()" >
-            <mat-icon>login</mat-icon>
-            <span class="nav-caption">Log In</span></a>
-          <a mat-list-item routerLink="/training" (click)="sidenav.close()">
-            <mat-icon>storage</mat-icon>
-            <span class="nav-caption">Training</span></a>
-
-            <mat-list-item>
-              <button mat-icon-button (click)="sidenav.close()">
-                <mat-icon>logout</mat-icon>
-                <span class="nav-caption">Logout</span>
-              </button>
-            </mat-list-item>
-    </mat-nav-list>
+    <app-sidenav-list (sideNavToggle)="sidenav.close()"></app-sidenav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="accent">
-      <div fxHide.gdArea.gt-xs>
-        <button mat-icon-button (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
-      </div>
-      <div><a routerLink="/">LOGO</a></div>
-
-      <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
-        <ul fxLayout  fxLayoutGap="10px" class="navigation-items">
-          <li><a routerLink="/signup">Sign Up</a></li>
-          <li> <a routerLink="/login">Sign In</a></li>
-          <li><a routerLink="/training">Training</a></li>
-        </ul>
-      </div>
-    </mat-toolbar>
+    <app-header (sideNavToggle)="sidenav.toggle()"></app-header>
     <main>
       <router-outlet></router-outlet>
     </main>
