--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,1 +1,19 @@
-<p>new-training works!</p>
+<section class="new-training" fxLayout fxLayoutAlign="center center">
+  <form #f="ngForm" (ngSubmit)="onStartTraining(f)">
+  <mat-card fxFlex.xs="100%" fxFlex="400px">
+  <mat-card-title fxLayoutAlign="center">Time to workout</mat-card-title>
+  <mat-card-content fxLayoutAlign="center">
+    <mat-form-field>
+      <mat-select placeholder="Workout type" ngModel name="exercise" required>
+        <mat-option *ngFor="let e of exercises" [value]="e.id">
+          {{e.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-card-content>
+  <mat-card-actions fxLayoutAlign="center">
+    <button type="submit" mat-button [disabled]="f.invalid">Start</button>
+  </mat-card-actions>
+  </mat-card>
+</form>
+</section>
