--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,1 +1,9 @@
-<p>training works!</p>
+<mat-tab-group *ngIf="!ongoingtTraining">
+  <mat-tab label="New Taining">
+    <app-new-training></app-new-training>
+  </mat-tab>
+  <mat-tab label="Past Trainings">
+  <app-past-training></app-past-training>
+  </mat-tab>
+</mat-tab-group>
+<app-current-training  *ngIf="ongoingtTraining"></app-current-training>
